Made changes in activeUser API
